--- a/Collapseborder.html
+++ b/Collapseborder.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 <style>
-table, th, td {
-  border: 1px solid red;
+ table, th, td {
+  border: 5px solid red;
+  background-color: yellow;
+  text-align: center;
   border-collapse: collapse;
 }
+ th, td {
+  padding: 20px;
+ }
 </style>
 </head>
 <body>
@@ -14,12 +19,12 @@ table, th, td {
 <p>If you want the borders to collapse into one border, add the CSS border-collapse property.</p>
 
 <table style="width:100%">
-  <tr style="color: blue">
+  <tr style="color: magenta; font-weight: bold;">
     <th>Firstname</th>
     <th>Lastname</th> 
     <th>Age</th>
   </tr>
-  <tr style="font-size: 150%">
+  <tr style="font-size: 100%">
     <td>Tawhid</td>
     <td>Islam</td>
     <td>23</td>
