--- a/Collapseborder.html
+++ b/Collapseborder.html
@@ -4,13 +4,17 @@
 <style>
  table, th, td {
   border: 5px solid red;
-  background-color: yellow;
   text-align: center;
   border-collapse: collapse;
 }
  th, td {
   padding: 20px;
  }
+ tr:nth-child(even) {
+  background-color: blue;
+}
+ tr:nth-child(odd) {
+  background-color: yellow;
 </style>
 </head>
 <body>
