--- a/Collapseborder.html
+++ b/Collapseborder.html
@@ -5,7 +5,7 @@
  table, th, td {
   border: 5px solid red;
   text-align: center;
-  border-collapse: collapse;
+  border: dotted;
 }
  th, td {
   padding: 20px;
