--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<footer>
-  <p>Author: Hege Refsnes</p>
-  <p><a href="mailto:hege@example.com">hege@example.com</a></p>
-</footer>
-
-</body>
+  <body>
+    <footer>
+      <p>Author: Hege Refsnes</p>
+      <p>Copyright © 2024</p>
+    </footer>
+  </body>
 </html>
-
