--- a/form.html
+++ b/form.html
@@ -10,5 +10,7 @@
       <input type="text" id="lname" name="lastname" value="Doe">
       <br><br>
       <input type="submit" value="Submit">
-  </body>
+  </form>
+    </body>
+
 </html>
