--- a/Assignment1.html
+++ b/Assignment1.html
@@ -8,25 +8,20 @@
     <form action="#" method="post">
         <label>* Company:</label>
         <input type="text" name="company" required><br><br>
-
         <label>* First Name:</label>
         <input type="text" name="firstName" required><br><br>
-
         <label>* Last Name:</label>
         <input type="text" name="lastName" required><br><br>
-
         <label>* Email Address:</label>
         <input type="email" name="email" required><br><br>
-
         <label>* Title:</label>
         <input type="text" name="title" required><br><br>
-
         <label>* Phone:</label>
         <input type="tel" name="phone" required><br><br>
-
-        <label>Cancel Registration:</label>
+        <label>Confirm  Registration:</label>
         <input type="checkbox" name="cancel"><br><br>
-
+         <label>Cancel Registration:</label>
+        <input type="checkbox" name="cancel"><br><br>
         <label>* 252 Training Session 2010:</label>
         <select name="trainingSession" required>
             <option value="">--Select a date--</option>
@@ -34,18 +29,23 @@
             <option value="Feb">February</option>
             <option value="Mar">March</option>
             <option value="Apr">April</option>
+            <option value="May">May</option>
+            <option value="Jun">June</option>
+            <option value="Jul">July</option>
+            <option value="Aug">August</option>
+            <option value="Sep">September</option>
+            <option value="Oct">October</option>
+            <option value="Nov">November</option>
+            <option value="Dec">December</option>
         </select><br><br>
-
         <label>* Job Function:</label><br>
         <input type="radio" name="jobFunction" value="Campaign Management" required> Campaign Management<br>
         <input type="radio" name="jobFunction" value="CRM Administration"> CRM Administration<br>
         <input type="radio" name="jobFunction" value="Email Deployment"> Email Deployment<br>
         <input type="radio" name="jobFunction" value="Partner"> Partner<br>
         <input type="radio" name="jobFunction" value="Employee"> Employee<br><br>
-
         <label>Dietary Requirements:</label>
         <input type="text" name="dietary"><br><br>
-
         <label>Expectations?:</label><br>
         <textarea name="expectations" rows="4" cols="40"></textarea><br><br>
 
