--- a/Assignment1.html
+++ b/Assignment1.html
@@ -4,8 +4,8 @@
     <title>Training Registration Form</title>
 </head>
 <body>
-    <h2>Training Registration Form</h2>
-    <form action="#" method="post">
+    <h2 style="text-align: center;"> Training Registration Form</h2>
+    <form action="/action_page.php" style="text-align: center;">
         <label>* Company:</label>
         <input type="text" name="company" required><br><br>
         <label>* First Name:</label>
@@ -49,7 +49,7 @@
         <label>Expectations?:</label><br>
         <textarea name="expectations" rows="4" cols="40"></textarea><br><br>
 
-        <input type="submit" value="Submit">
+        <input type="submit" style="color: green" value="Submit">
     </form>
 </body>
 </html>
