--- a/Assignment1.html
+++ b/Assignment1.html
@@ -6,6 +6,8 @@
 <body>
     <h2 style="text-align: center;"> Training Registration Form</h2>
     <form action="/action_page.php" style="text-align: center;">
+        <fieldset>
+            <legend>Personal Information</legend>
         <label>* Company:</label>
         <input type="text" name="company" required><br><br>
         <label>* First Name:</label>
@@ -21,7 +23,10 @@
         <label>Confirm  Registration:</label>
         <input type="checkbox" name="cancel"><br><br>
          <label>Cancel Registration:</label>
+ 
         <input type="checkbox" name="cancel"><br><br>
+                </fieldset>
+                <br>
         <label>* 252 Training Session 2010:</label>
         <select name="trainingSession" required>
             <option value="">--Select a date--</option>
@@ -38,12 +43,14 @@
             <option value="Nov">November</option>
             <option value="Dec">December</option>
         </select><br><br>
+        <hr>
         <label>* Job Function:</label><br>
         <input type="radio" name="jobFunction" value="Campaign Management" required> Campaign Management<br>
         <input type="radio" name="jobFunction" value="CRM Administration"> CRM Administration<br>
         <input type="radio" name="jobFunction" value="Email Deployment"> Email Deployment<br>
         <input type="radio" name="jobFunction" value="Partner"> Partner<br>
         <input type="radio" name="jobFunction" value="Employee"> Employee<br><br>
+        <hr>
         <label>Dietary Requirements:</label>
         <input type="text" name="dietary"><br><br>
         <label>Expectations?:</label><br>
