--- a/Assignment1.html
+++ b/Assignment1.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Training Registration Form</title>
+    <script>
+        alert("Please fill out all required fields marked with an asterisk (*) before submitting the form.");
+    </script>
 </head>
 <body>
     <h2 style="text-align: center;"> Training Registration Form</h2>
