--- a/Assignment1.html
+++ b/Assignment1.html
@@ -3,7 +3,7 @@
 <head>
     <title>Training Registration Form</title>
     <script>
-        alert("Please fill out all required fields marked with an asterisk (*) before submitting the form.");
+        alert("Please fill out all required fields ");
     </script>
 </head>
 <body>
