--- a/div.html
+++ b/div.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="ass1.css">
+    </head>
 <body>
 
-<div style="background-color:black;color:white;padding:20px;">
+<div>
   <h2>London</h2>
   <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
