--- a/Assignment1.html
+++ b/Assignment1.html
@@ -30,6 +30,7 @@
         <input type="checkbox" name="cancel"><br><br>
                 </fieldset>
                 <br>
+                <div>
         <label>* 252 Training Session 2010:</label>
         <select name="trainingSession" required>
             <option value="">--Select a date--</option>
@@ -47,6 +48,7 @@
             <option value="Dec">December</option>
         </select><br><br>
         <hr>
+        </div>
         <label>* Job Function:</label><br>
         <input type="radio" name="jobFunction" value="Campaign Management" required> Campaign Management<br>
         <input type="radio" name="jobFunction" value="CRM Administration"> CRM Administration<br>
