--- a/Collapseborder.html
+++ b/Collapseborder.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
- table, th, td {
-  border: 5px solid red;
-  text-align: center;
-  border: dotted;
-}
- th, td {
-  padding: 20px;
- }
- tr:nth-child(even) {
-  background-color: blue;
-}
- tr:nth-child(odd) {
-  background-color: yellow;
-</style>
+  <title> This is a table</title>
+
 </head>
 <body>
 
 <h2>Collapsed Borders</h2>
-<p>If you want the borders to collapse into one border, add the CSS border-collapse property.</p>
 
-<table style="width:100%">
-  <tr style="color: magenta; font-weight: bold;">
+<table>
+  <tr>
     <th>Firstname</th>
     <th>Lastname</th> 
     <th>Age</th>
+    <th> Gender</th>
+    
   </tr>
-  <tr style="font-size: 100%">
+  <tr>
     <td>Tawhid</td>
     <td>Islam</td>
     <td>23</td>
