--- a/Collapseborder.html
+++ b/Collapseborder.html
@@ -27,9 +27,9 @@
     <td>26</td>
   </tr>
   <tr>
-    <td>Yeasmin</td>
-    <td>Akter</td>
-    <td>39</td>
+    <td>Arafat</td>
+    <td>Sarkar</td>
+    <td>25</td>
   </tr>
 </table>
 
