--- a/assignment2.html
+++ b/assignment2.html
@@ -7,21 +7,19 @@
   <link rel="stylesheet" href="assignment2.css">
 </head>
 <body>
-
   <section class="contact-section">
-    <h2>Connect With Us</h2>
+    <h1>Connect With Us</h1>
     
     <div class="contact-container">
-      <!-- Left side: Get in Touch -->
       <div class="contact-info">
         <h3>Get in Touch</h3>
         <div class="info-item">
-          <h4>Visit Us</h4>
+          <h4> Visit Us</h4>
           <p>123 Wellness Street<br>Mindful City, MC 12345</p>
         </div>
         <div class="info-item">
           <h4>Email</h4>
-          <p>hello@innerpeace.com<br>support@innerpeace.com</p>
+          <p>tawhid@2210.com<br>techstdio@intern.com</p>
         </div>
         <div class="info-item">
           <h4>Live Chat</h4>
@@ -32,35 +30,32 @@
           <a href="#">f</a>
           <a href="#">t</a>
           <a href="#">i</a>
+          <a href="#">l</a>
         </div>
       </div>
-
-      <!-- Right side: Send a Message -->
       <div class="contact-form">
         <h3>Send a Message</h3>
-        <form action="#">
+        <form action="/action_page.php" method="post">
           <label for="name">Your Name</label>
-          <input type="text" id="name" placeholder="Enter your name">
-
+          <input type="text" id="name"">
           <label for="email">Email Address</label>
-          <input type="email" id="email" placeholder="Enter your email">
-
+          <input type="email" id="email">
           <label for="subject">Subject</label>
-          <textarea id="subject" rows="4" placeholder="Write your message..."></textarea>
+          <textarea id="subject" rows="4""></textarea>
 
-          <button type="submit">Send Message</button>
+
+          <button type="button">Send Message</button>
         </form>
       </div>
     </div>
   </section>
-
   <footer>
     <p>
       <a href="#">Privacy Policy</a> |
       <a href="#">Terms of Service</a> |
       <a href="#">Support</a>
     </p>
-    <small>© 2025 Inner Peace. All rights reserved. Nurturing minds, one breath at a time. Designed by Tooplate</small>
+    <small>© 2025 TechStdio Intern Opportunity. All the student must do an professional enterprise project in these 4 mionth internship</small>
   </footer>
 
 </body>
