--- a/Practice.html
+++ b/Practice.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image" href="pre-size.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Momo+Signature&display=swap" rel="stylesheet">
     <title>Practice the html</title>
+    <link rel="stylesheet" href="practice.css">
+    <meta charset="UTF-8">
+    <script>
+      alert("Welcome to TechStdio Intern Opportunity");
+    </script>
   </head>
   <body>
 <h1 title="This is a title">This is a html practice</h1>
+<h2> Hello Bangladesh</h2>
+<h3> Hello India</h3>
+<h4>Hello Malaysiya</h4>
+<h5>Hello Japan</h5>
+<h6>Hello Korea</h6>
 <p> My name is Tawhid Islam</p>
+<p> I am a student of TechStdio Intern Opportunity</p>
+<p> I am learning web development from TechStdio</p>
+<hr>
+<a href="https://classroom.google.com/c/NzQ1Nzk3ODkwMzQ2">Google Classrom</a>
+<h1><a href="assignment2.css">My assignment css part</a></h1>
+<p style="font-family:Georgia, 'Times New Roman', Times, serif;font-size:15px; color: maroon;">Grief <ins>and loss poem </ins>— We are here to provide the much needed <b>support to bereaved parents following baby loss</b>. <del>I heard your voice</del> in the wind today and I turned to see your face. <strong>Understand Stillbirth.</strong> Understand Neonatal Death. <emp>Make A Donation</emp>. Be A Volunteer. Services: <mark></mark>Baby loss support</mark>, <small>Bereaved parent support.</small>
+</p>
+
+<hr>
+<a href="mailto:22103205@iubat.edu" target="_blank">Sanjida Emu Mail adress</a>
+<p> (a+b)<sup>2</sup></p>
+<p>log<sub>10</sub>(100)</p>
+<hr>
+<a href="https://www.youtube.com/watch?v=2f-k8Os7cvM&list=PLSNRR4BKcowBkHYYumZffsZ3G52hPqRjc&index=12" target="_blank"><img src="picture-lake.jpg" alt="Link picture" width="100" height="100" ></a>
+<!--
+<pre style="font-family:'Momo Signature', cursive; color:blueviolet">
+  Grief and loss poem — We are here to provide
+   the much needed support to bereaved parents following baby loss.
+    I heard your voice in the wind today and I turned to see your face.
+     Understand Stillbirth.
+      Understand Neonatal Death. Make A Donation.
+      Be A Volunteer. Services: Baby loss support, Bereaved parent support.</pre>
+-->
+<hr>
+
+<p> loren tube <cite>provide free </cite>classes in the youtube<br>for the web development bangladesh</p>
+<hr>
+<blockquote>"A man who dares to waste one hour of time has not discovered the value of life." — Charles Darwin. 78. "Time stays long enough for anyone who will use it.</blockquote>
+<hr>
+<q>Life quotes help inspire and motivate you. Find positive quotes about life, inspirational sayings, and more to help give you a fresh perspective.</q>
+<hr>
+<bdo dir="rtl">HELLO World</bdo>
+<hr>
+<address>Konda Bazarpara Boliarpur Savar, dhaka-1216</address>
+<hr>
+<p> <abbr title="Hyper text Markp Language">HTML</abbr> is not a programming language. It is a markup language</p>
+<hr>
+<h6 style="font-size: 25px">Hello Koorea</h6>
 <img src="picture-lake.jpg" alt="The natural picture" width="300" height="200">
   </body>
   </html>
