--- a/blockwebsite.html
+++ b/blockwebsite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=6.0">
   <link rel="stylesheet" href="block.css">
   <title>Connect With Us</title>
   </head>
@@ -12,24 +12,23 @@
   </header>
   <nav>
     <ul>
-  <li><a href="">Home</a></li>
+  <li><a href="">Name</a></li>
   <li><a href="">About</a></li>
-  <li><a href="">Services</a></li>
-  <ul>
+  <li><a href="">Qualification</a></li>
+    </ul>
   </nav>
   <section>
     <div>
-      <h2>This is Title</h2>
-      <ul>
-        <li><a href="">Latest Post</a></li>
-         <li><a href="">Latest Post</a></li>
-          <li><a href="">Latest Post</a></li>
-           <li><a href="">Latest Post</a></li>
-            <li><a href="">Latest Post</a></li>
-      </ul>
+     <h2>This is tawhids bio</h2>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque dolorem facilis deserunt aut obcaecati itaque sed maiores magni voluptatibus ut doloremque odit, natus possimus est ipsa eum dolores esse quas.</p>
     </div>
       <aside>
-        <p> ffhsefghdjcvnoweruphnvj nfv</p>
+        <h2> This is a html aside content</h2>
+        <ul>
+          <li><a href="">Latest Post</a> </li>
+          <li><a href="">Popular Post</a> </li>
+          <li><a href="">Trending Post</a> </li>
+        </ul>
      </aside>
   </section>
   <footer>
