--- a/practicecss.html
+++ b/practicecss.html
@@ -7,19 +7,23 @@
   <link rel="stylesheet" href="practicecss.css">
 </head>
 <body>
-<div>
+<div class="parent">
     <h1> Hello Tawhid </h1>
-  <h2> Tawhid the Coder</h2>
+
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi recusandae quaerat, exercitationem harum, asperiores nesciunt officia hic consequatur dolorum veritatis nobis vitae voluptates! Quis qui labore cupiditate adipisci similique eius.</p>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi recusandae quaerat, exercitationem harum, asperiores nesciunt officia hic consequatur dolorum veritatis nobis vitae voluptates! Quis qui labore cupiditate adipisci similique eius.</p>
+
+
+<div class="child">
+  <p>Lorem ipsum dolor sit
+
+  </p>
 </div>
-<div>
+</div>
+<div class="parent">
     <h1> Hello Tawhid </h1>
-  <h2> Tawhid the Coder</h2>
+
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi recusandae quaerat, exercitationem harum, asperiores nesciunt officia hic consequatur dolorum veritatis nobis vitae voluptates! Quis qui labore cupiditate adipisci similique eius.</p>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi recusandae quaerat, exercitationem harum, asperiores nesciunt officia hic consequatur dolorum veritatis nobis vitae voluptates! Quis qui labore cupiditate adipisci similique eius.</p>
-   
-</div>
+  </div>
 
   </body>
 </html>
