--- a/icon.html
+++ b/icon.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-  
-</html>
+  <head>
+    <title> Icon adding</title>
+    <link rel="stylesheet" href="icon.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  </head>
+</html>
