--- a/assignment2.html
+++ b/assignment2.html
@@ -5,28 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connect With Us</title>
   <link rel="stylesheet" href="assignment2.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <section class="contact-section">
-    <h1>Connect With Us</h1>
-    
+    <h1>Connect With Us</h1>    
     <div class="contact-container">
       <div class="contact-info">
         <h3>Get in Touch</h3>
         <div class="info-item">
-          <h4> Visit Us</h4>
-          <p>123 Wellness Street<br>Mindful City, MC 12345</p>
+          <h4><i class="fa-solid fa-location-dot"></i> Visit Us</h4>
+          <p>Hossain Tower Sector-6<br>House Building Uttara</p>
         </div>
         <div class="info-item">
-          <h4>Email</h4>
+          <h4><i class="fa-solid fa-envelope"></i> Email</h4>
           <p>tawhid@2210.com<br>techstdio@intern.com</p>
         </div>
         <div class="info-item">
-          <h4>Live Chat</h4>
+          <h4><i class="fa-solid fa-headset"></i>  Live Chat</h4>
           <p>Available 24/7 for urgent support</p>
         </div>
-
         <div class="social-icons">
           <a href="#">f</a>
           <a href="#">t</a>
@@ -37,14 +35,12 @@
       <div class="contact-form">
         <h3>Send a Message</h3>
         <form action="/action_page.php" method="post">
-          <label for="name">Your Name</label>
+          <label for="name"><b>Your Name<b></b></label>
           <input type="text" id="name"">
-          <label for="email">Email Address</label>
+          <label for="email"><b>Email Address</b></label>
           <input type="email" id="email">
-          <label for="subject">Subject</label>
+          <label for="subject"><b>Subject</b></label>
           <textarea id="subject" rows="4""></textarea>
-
-
           <button type="button">Send Message</button>
         </form>
       </div>
@@ -58,6 +54,5 @@
     </p>
     <small>© 2025 TechStdio Intern Opportunity. All the student must do an professional enterprise project in these 4 mionth internship</small>
   </footer>
-
 </body>
 </html>
