--- a/Listing.html
+++ b/Listing.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="Listing.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Listing.css">
   <title>List</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
     <li>Pizza</li>
     <li>Burger</li>
     <li>Sandwich</li>
+    
     <li>Pasta</li>
     <li>Salad</li>
   </ul>
