--- a/TableMaking.html
+++ b/TableMaking.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="table.css"
   <title>A Table Making about Student</title>
 </head>
 <body>
-  
+  <table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>ID</th>
+      <th>Gender</th>
+      <th>Age</th>
+      <th>Profession</th>
+      
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Tawhid</td>
+      <td>22</td>
+      <td>Male</td>
+      <td>23</td>
+      <td>Student</td>
+    </tr>
+     <tr>
+      <td>Arman</td>
+      <td>24</td>
+      <td>Male</td>
+      <td>21</td>
+      <td>Student</td>
+    </tr>
+  </tbody>
+  </table>
   
 </body>
 </html>
