--- a/colorsboot.html
+++ b/colorsboot.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title> colors</title>
+  <title> display</title>
   <meta charset="UTF-8">
   <meta name="viewport" content= "width=device-width, initial-scale-1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-<style>
-  h2{
-    margin: 20px 20px;
-  }
-</style>
   </head>
   <body>
+    <!--
     <div class="container">
       <h2 class="  text-primary bg-secondary">Tawhid Islam</h2>
       <h2 class=" text-secondary bg-dark">Id-22103205</h2>
       <h2 class="text-warning">Dept- BCSE</h2>
+    </div>
+  -->
+    <div class="container">
+      <div class="d-none bg-danger text-light">Display none example</div>
     </div>
 
   </body>
