--- a/colorsboot.html
+++ b/colorsboot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title> display</title>
+  <title> display time</title>
   <meta charset="UTF-8">
   <meta name="viewport" content= "width=device-width, initial-scale-1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,10 +15,35 @@
       <h2 class=" text-secondary bg-dark">Id-22103205</h2>
       <h2 class="text-warning">Dept- BCSE</h2>
     </div>
-  -->
+ 
     <div class="container">
       <div class="d-none bg-danger text-light">Display none example</div>
     </div>
+    -->
+    <div class="container">
+      <div class="d-inline-block bg-danger text-light">Inline block</div>
+    </div>
+     <div class="d-grid bg-danger text-light">grid</div>
+    </div>
+     <div class="d-table bg-danger text-light">table</div>
+    </div>
+     <div class="d-table-cell bg-danger text-light">table cell</div>
+    </div>
+     <div class="d-inline bg-danger text-light">Inline</div>
+    </div>
+     <div class="d-inline-grid bg-danger text-light">Inline grid</div>
+    </div>
+     <div class="d-block bg-danger text-light">block</div>
+    </div>
+     <div class="d-flex bg-danger text-light">flex</div>
+    </div>
+     <div class="d-inline-flex bg-danger text-light">Inline flex</div>
+    </div>
+     <div class="d-table-cell bg-danger text-light">table cell</div>
+    </div>
+     <div class="d-table-row bg-danger text-light">table row</div>
+    </div>
+    
 
   </body>
 </html>
