--- a/colorsboot.html
+++ b/colorsboot.html
@@ -7,6 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<style>
+  .bd-highlight{
+    background-color: rgb(39, 4, 241);
+    margin: 5px;
+  }
+  .flex-row{
+    background-color: yellow;
+  }
+  .flex-row-reverse{
+    background-color:brown;
+  }
+</style>
   </head>
   <body>
     <!--
@@ -19,7 +31,7 @@
     <div class="container">
       <div class="d-none bg-danger text-light">Display none example</div>
     </div>
-    -->
+   
     <div class="container">
       <div class="d-inline-block bg-danger text-light">Inline block</div>
     </div>
@@ -43,7 +55,35 @@
     </div>
      <div class="d-table-row bg-danger text-light">table row</div>
     </div>
-    
+     -->
+    <!--direction
+    <div class="container">
+      <div class="d-flex flex-row">
+        <div class="bd-highlight">Display Item1</div>
+        <div class="bd-highlight">Display Item2</div>
+        <div class="bd-highlight">Display Item2</div>
+      </div>
+      <div class="d-flex flex-row-reverse">
+        <div class="bd-highlight">Display Item1</div>
+        <div class="bd-highlight">Display Item2</div>
+        <div class="bd-highlight">Display Item2</div>
+
+      </div>
+       <div class="d-flex flex-column">
+        <div class="bd-highlight">Display Item1</div>
+        <div class="bd-highlight">Display Item2</div>
+        <div class="bd-highlight">Display Item3</div>
+<br>
+      </div>
+       <div class="d-flex flex-column-reverse">
+        <div class="bd-highlight">Display Item1</div>
+        <div class="bd-highlight">Display Item2</div>
+        <div class="bd-highlight">Display Item3</div>
+
+      </div>
+      -->
+      
+    </div>
 
   </body>
 </html>
