--- a/colorsboot.html
+++ b/colorsboot.html
@@ -82,8 +82,41 @@
 
       </div>
       -->
-      
+      <!--Justify Content-->
+      <div class="d-flex bg-danger justify-content-start">
+        <div classs="">div1</div>
+        <div classs="">div2</div>
+        <div classs="">div3</div>
+      </div>
+      <div class="d-flex bg-success justify-content-end">
+        <div classs="p-2">div1</div>
+        <div classs="p-2">div2</div>
+        <div classs="p-2">div3</div>
+      </div>
+       <div class="d-flex bg-secondary justify-content-center">
+        <div classs="">div1</div>
+        <div classs="">div2</div>
+        <div classs="">div3</div>
+      </div>
+       <div class="d-flex bg-success justify-content-between">
+        <div classs="">div1</div>
+        <div classs="">div2</div>
+        <div classs="">div3</div>
+      </div>
+       <div class="d-flex bg-success  justify-content-around">
+        <div classs="bd-highlight">div1</div>
+        <div classs="">div2</div>
+        <div classs="">div3</div>
+      </div>
+       <div class="d-flex bg-success justify-content-evenly">
+        <div classs="">div1</div>
+        <div classs="">div2</div>
+        <div classs="">div3</div>
+      </div>
     </div>
+    <p class="user-select-none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
+    <p class="user-select-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
+    <p class="user-select-all">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
 
   </body>
 </html>
