--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -19,7 +19,7 @@
     <h1 class="bg-success">Abu Haider Rony</h1>
     <h1 class="bg-success-subtle">Arafat Meraj</h1>
     <h1 class="bg-danger">Ovi Sarkar</h1>
-    <h1 class="bg-warning">Tamzid Islam</h1>
+    <h1 class=>Tamzid Islam</h1>
   </div>
 </body>
   </html>
