--- a/bootstrapborder.html
+++ b/bootstrapborder.html
@@ -44,6 +44,6 @@
     <div class="rounded-end"></div>
     <div class="rounded-start"></div>
     <div class="rounded-pill"></div>-->
-    <div class="rounded-1;"
+    <div class="rounded-"
   </body>
 </html>
