--- a/colorsboot.html
+++ b/colorsboot.html
@@ -82,7 +82,7 @@
 
       </div>
       -->
-      <!--Justify Content-->
+      <!--Justify Content
       <div class="d-flex bg-danger justify-content-start">
         <div classs="">div1</div>
         <div classs="">div2</div>
@@ -114,9 +114,23 @@
         <div classs="">div3</div>
       </div>
     </div>
+  -->
+    <!--
     <p class="user-select-none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
     <p class="user-select-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
     <p class="user-select-all">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem eius libero officiis voluptas totam repellendus ad nesciunt similique modi natus!</p>
+<a href="" class="pe-auto">Click Me!
+  <a href="#" class="pe-one">Please!</a>
+  <a href="#" class="pe-none"> Oh No!</a>
+-->
+  <div class="position-relative bg-dark" style="width:800px; height:500px;">
+    <div class="position-absolute top-0  end-0 bg-danger " style="width:40px; height: 40px;"></div>
+     <div class="position-absolute bottom-0  start-0 bg-danger " style="width:40px; height: 40px;"></div>
+      <div class="position-absolute bottom-0  end-0 bg-danger " style="width:40px; height: 40px;">
+      </div> <div class="position-absolute top-50  start-50 bg-danger " style="width:40px; height: 40px;"></div>
+      </div> <div class="position-absolute start-48 end-48 bg-danger " style="width:40px; height: 40px;"></div>
+  </div>
+
 
   </body>
 </html>
