--- a/colorsboot.html
+++ b/colorsboot.html
@@ -123,12 +123,20 @@
   <a href="#" class="pe-one">Please!</a>
   <a href="#" class="pe-none"> Oh No!</a>
 -->
+  <!--Positio
   <div class="position-relative bg-dark" style="width:800px; height:500px;">
     <div class="position-absolute top-0  end-0 bg-danger " style="width:40px; height: 40px;"></div>
      <div class="position-absolute bottom-0  start-0 bg-danger " style="width:40px; height: 40px;"></div>
       <div class="position-absolute bottom-0  end-0 bg-danger " style="width:40px; height: 40px;">
       </div> <div class="position-absolute top-50  start-50 bg-danger " style="width:40px; height: 40px;"></div>
       </div> <div class="position-absolute start-48 end-48 bg-danger " style="width:40px; height: 40px;"></div>
+  </div>
+-->
+  <div class="container">
+    <div class="bg-light shadow-none p-3 mb-5 rounded ">Hello Tawhid</div>
+      <div class="bg-body shadow-sm p-3 mb-5 rounded">Hello Tawhid</div>
+        <div class="bg-body shadow p-3 mb-5 rounded">Hello Tawhid</div>
+          <div class="bg-light shadow-lg p-3 mb-5 rounded">Hello Tawhid</div>
   </div>
 
 
