--- a/colorsboot.html
+++ b/colorsboot.html
@@ -132,13 +132,21 @@
       </div> <div class="position-absolute start-48 end-48 bg-danger " style="width:40px; height: 40px;"></div>
   </div>
 -->
+  <!--shadow
   <div class="container">
     <div class="bg-light shadow-none p-3 mb-5 rounded ">Hello Tawhid</div>
       <div class="bg-body shadow-sm p-3 mb-5 rounded">Hello Tawhid</div>
         <div class="bg-body shadow p-3 mb-5 rounded">Hello Tawhid</div>
           <div class="bg-light shadow-lg p-3 mb-5 rounded">Hello Tawhid</div>
   </div>
-
+-->
+ <div class="container">
+  <div class="w-25 bg-danger p-2 m-2">tawhid</div>
+  <div class="w-50 bg-success text-center p-2 m-2">tawhid</div>
+   <div class="w-75 bg-danger text-center p-2 m-2">tawhid</div>
+    <div class="w-100 bg-success text-center p-2 m-2">tawhid</div>
+      <div class="w-auto bg-warning text-center p-2 m-2">tawhid</div>
+ </div>
 
   </body>
 </html>
