--- a/colorsboot.html
+++ b/colorsboot.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <style>
+  /*
   .bd-highlight{
     background-color: rgb(39, 4, 241);
     margin: 5px;
@@ -18,6 +19,11 @@
   .flex-row-reverse{
     background-color:brown;
   }
+    */
+    .heightarea{
+      height:150px;
+      background-color: aquamarine;
+    }
 </style>
   </head>
   <body>
@@ -140,13 +146,15 @@
           <div class="bg-light shadow-lg p-3 mb-5 rounded">Hello Tawhid</div>
   </div>
 -->
- <div class="container">
-  <div class="w-25 bg-danger p-2 m-2">tawhid</div>
-  <div class="w-50 bg-success text-center p-2 m-2">tawhid</div>
-   <div class="w-75 bg-danger text-center p-2 m-2">tawhid</div>
-    <div class="w-100 bg-success text-center p-2 m-2">tawhid</div>
-      <div class="w-auto bg-warning text-center p-2 m-2">tawhid</div>
- </div>
+<div class="heightarea">
+  <div class="h-25 d-inline-block bg-info w-25">Tawhid Islam</div>
+  <div class="h-50 d-inline-block bg-warning w-25">Tawhid Islam</div>
+  <div class="h-75 d-inline-block bg-success w-25">Tawhid Islam</div>
+  <div class="h-100 d-inline-block bg-danger w-25">Tawhid Islam</div>
+  <div class="h-auto d-inline-block bg-dark w-25">Tawhid Islam</div>
+
+
+</div>
 
   </body>
 </html>
