--- a/colorsboot.html
+++ b/colorsboot.html
@@ -146,15 +146,21 @@
           <div class="bg-light shadow-lg p-3 mb-5 rounded">Hello Tawhid</div>
   </div>
 -->
+  <!--
 <div class="heightarea">
   <div class="h-25 d-inline-block bg-info w-25">Tawhid Islam</div>
   <div class="h-50 d-inline-block bg-warning w-25">Tawhid Islam</div>
   <div class="h-75 d-inline-block bg-success w-25">Tawhid Islam</div>
   <div class="h-100 d-inline-block bg-danger w-25">Tawhid Islam</div>
   <div class="h-auto d-inline-block bg-dark w-25">Tawhid Islam</div>
-
-
 </div>
+-->
+<div class="container">
+  <div class="bg-danger p-2 ">Hello Tawhid</div>
+  <div class="bg-danger ps-5 mt-5 ">Hello Tawhid</div>
+</div>
+<div class="d-grid bg-light m-5">Tawhid</div>
+<div class="d-grid bg-light m-4">Tawhid</div>
 
   </body>
 </html>
