--- a/colorsboot.html
+++ b/colorsboot.html
@@ -155,12 +155,18 @@
   <div class="h-auto d-inline-block bg-dark w-25">Tawhid Islam</div>
 </div>
 -->
+<!--Spacing
 <div class="container">
   <div class="bg-danger p-2 ">Hello Tawhid</div>
   <div class="bg-danger ps-5 mt-5 ">Hello Tawhid</div>
 </div>
 <div class="d-grid bg-light m-5">Tawhid</div>
 <div class="d-grid bg-light m-4">Tawhid</div>
-
+-->
+<div class="text-start bg-danger mt-3">Tawhid Islam</div>
+<div class="text-sm-center bg-danger mt-3">Tawhid Islam</div>
+<div class="text-end bg-danger mt-2 ms-3 me-5">Tawhid Islam</div>
+<div class="text-lg-end bg-danger mt-2 ms-3 me-5">Tawhid Islam</div>
+<div class="badge bg-primary text-wrap" style="width:6rem;">This is my wrap text</div>
   </body>
 </html>
