--- a/colorsboot.html
+++ b/colorsboot.html
@@ -168,5 +168,14 @@
 <div class="text-end bg-danger mt-2 ms-3 me-5">Tawhid Islam</div>
 <div class="text-lg-end bg-danger mt-2 ms-3 me-5">Tawhid Islam</div>
 <div class="badge bg-primary text-wrap" style="width:6rem;">This is my wrap text</div>
+<p class=" fs-6 text-lowercased bg-dark text-primary">This is My Text</p>
+<tr>
+<td class="align-baseline">baseline</td>
+<td class="align-top">top</t>
+<td class="align-middle">middle</td>
+<td class="align-bottom">bottom</td>
+<td class="align-text-top">text-top</td>
+<td class="align-text-bottom">text-bottom</td>
+</tr>
   </body>
 </html>
