--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -9,8 +9,53 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </head>
   <body>
+    <!--
     <div class="bg-info clearfix">
       <div class="btn btn-primary float-start">button</div>
         <div class="btn btn-secondary float-end">button</div>
     </div>
+   <!--link design
+    <a href="#" class="link-primary text-decoration-none">Link primary</a>
+    <a href="#" class="link-secondary">Link primary</a>
+    <a href="#" class="link-success">Link primary</a>
+    <a href="#" class="link-warning">Link primary</a>
+    <a href="#" class="link-danger">Link primary</a>
+    <a href="#" class="link-info">Link primary</a>
+    <a href="#" class="link-dark">Link primary</a>
+    <a href="#" class="link-light">Link primary</a>
+    
+    <div clas="container">
+      <div class="ratio ratio-16x9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Iz3O4YrEsos?si=EMNpduAiX7y1awnq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+    -->
+    <!--
+    <div >
+      <button class="btn btn-success"></button>
+      
+    </div>
+    -->
+    <div class="container">
+      <div class="vstack gap-3">
+        <div vlass="bg-light border">Item1</div>
+         <div vlass="bg-light border">Item2</div>
+         <div vlass="bg-light border">Item3</div>
+      </div>
+       <div class="hstack gap-3">
+        <div vlass="bg-light border">Item1</div>
+         <div vlass="bg-light border">Item2</div>
+         <div vlass="bg-light border">Item3</div>
+         </div>
+      </div class="vstack mx-auto gap-2">
+      <button class="btn btn-secondary">Save changes</button>
+      <button class="btn btn-outline-secondary">cancel</button>
+    </div>
+    <div class="hstack gap-2">
+      <input type="text" class="form-control" placeholder="Enter your Amount">
+      <button class="btn btn-success">Submit</button>
+      <div class="vr"></div>
+      <button class="btn btn-outline"></button>
+    </div>
   </body>
+  </html>
