--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -35,7 +35,7 @@
       <button class="btn btn-success"></button>
       
     </div>
-    -->
+    hstach&vstack-----
     <div class="container">
       <div class="vstack gap-3">
         <div vlass="bg-light border">Item1</div>
@@ -51,11 +51,15 @@
       <button class="btn btn-secondary">Save changes</button>
       <button class="btn btn-outline-secondary">cancel</button>
     </div>
+    <br>
     <div class="hstack gap-2">
       <input type="text" class="form-control" placeholder="Enter your Amount">
       <button class="btn btn-success">Submit</button>
       <div class="vr"></div>
-      <button class="btn btn-outline"></button>
+      <button class="btn btn-outline-danger">Reset</button>
     </div>
+    -->
+    <h2 class="visually-hidden">Lorem ipsum dolor sit amet.</h2>
+    <h2 class="visually-hidden-focusable">Lorem ipsum dolor sit amet.</h2>
   </body>
   </html>
