--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -58,8 +58,16 @@
       <div class="vr"></div>
       <button class="btn btn-outline-danger">Reset</button>
     </div>
-    -->
+visually hidden
     <h2 class="visually-hidden">Lorem ipsum dolor sit amet.</h2>
     <h2 class="visually-hidden-focusable">Lorem ipsum dolor sit amet.</h2>
+        -->
+    <div class="card style=width:18rem;">
+      <img src="korea.png" alt="" class="card-omg-top">
+      <h5>Card Heading</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae autem doloremque nam quaerat et? Iusto dicta accusamus deserunt nostrum odit.</p>
+      <a class="btn btn-outline-danger stretched-link" href="https://getbootstrap.com/docs/5.3/helpers/ratio/-link">Read More</a>
+    
+    </div>
   </body>
   </html>
