--- a/alret.html
+++ b/alret.html
@@ -9,6 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </head>
   <body>
+    <!--Alert button
     <div class="container">
       <div class="alert alert-primary">Alert message</div>
       <div class="alert alert-secondary">Alert Message2</div>
@@ -41,6 +42,7 @@ if (alertTrigger) {
   })
 }
     </script>
-
+-->
+    <h1> Facebook <span class="badge bg-primary">Badge</span></h1>
     </body>
     </html>
